--- a/ui/src/inputprofileeditor.ui
+++ b/ui/src/inputprofileeditor.ui
@@ -190,6 +190,13 @@
             </property>
            </widget>
           </item>
+          <item row="2" column="0" colspan="4">
+           <widget class="QCheckBox" name="m_extraFeedback">
+            <property name="text">
+             <string>Send extra feedback on release</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
        </item>
