--- a/qmlui/qmlui.qrc
+++ b/qmlui/qmlui.qrc
@@ -243,6 +243,7 @@
     <file alias="EditorView.qml">qml/fixtureeditor/EditorView.qml</file>
     <file alias="PhysicalProperties.qml">qml/fixtureeditor/PhysicalProperties.qml</file>
     <file alias="ChannelEditor.qml">qml/fixtureeditor/ChannelEditor.qml</file>
+    <file alias="ModeEditor.qml">qml/fixtureeditor/ModeEditor.qml</file>
 
     <!-- JavaScript helpers -->
     <file alias="CanvasDrawFunctions.js">js/CanvasDrawFunctions.js</file>
