--- a/ui/src/rgbmatrixeditor.ui
+++ b/ui/src/rgbmatrixeditor.ui
@@ -154,7 +154,7 @@
          </widget>
         </item>
         <item row="2" column="1" colspan="2">
-         <widget class="QComboBox" name="m_colorModeCombo">
+         <widget class="QComboBox" name="m_controlModeCombo">
           <item>
            <property name="text">
             <string>Default (RGB)</string>
