--- a/ui/src/qlcui.qrc
+++ b/ui/src/qlcui.qrc
@@ -103,6 +103,7 @@
         <file alias="rainbow.png">../../resources/icons/png/rainbow.png</file>
         <file alias="random.png">../../resources/icons/png/random.png</file>
         <file alias="record.png">../../resources/icons/png/record.png</file>
+        <file alias="refresh.png">../../resources/icons/png/refresh.png</file>
         <file alias="remap.png">../../resources/icons/png/remap.png</file>
         <file alias="rgbmatrix.png">../../resources/icons/png/rgbmatrix.png</file>
         <file alias="rgbpanel.png">../../resources/icons/png/rgbpanel.png</file>
