--- a/qmlui/qmlui.qrc
+++ b/qmlui/qmlui.qrc
@@ -21,6 +21,7 @@
     <file alias="CustomSpinBox.qml">qml/CustomSpinBox.qml</file>
     <file alias="CustomDoubleSpinBox.qml">qml/CustomDoubleSpinBox.qml</file>
     <file alias="CustomTextEdit.qml">qml/CustomTextEdit.qml</file>
+    <file alias="CustomTextInput.qml">qml/CustomTextInput.qml</file>
     <file alias="DayTimeTool.qml">qml/DayTimeTool.qml</file>
     <file alias="DMXAddressTool.qml">qml/DMXAddressTool.qml</file>
     <file alias="DMXAddressWidget.qml">qml/DMXAddressWidget.qml</file>
