--- a/resources/icons/svg/svgicons.qrc
+++ b/resources/icons/svg/svgicons.qrc
@@ -102,8 +102,10 @@
     <file alias="knob.svg">knob.svg</file>
     <file alias="label.svg">label.svg</file>
     <file alias="laser.svg">laser.svg</file>
+    <file alias="layout-btf.svg">layout-btf.svg</file>
     <file alias="layout-btt.svg">layout-btt.svg</file>
     <file alias="layout-center.svg">layout-center.svg</file>
+    <file alias="layout-ftb.svg">layout-ftb.svg</file>
     <file alias="layout-ltr.svg">layout-ltr.svg</file>
     <file alias="layout-rtl.svg">layout-rtl.svg</file>
     <file alias="layout-ttb.svg">layout-ttb.svg</file>
